force-app/main/default/objects/Onboarding_Project_Step__c/Onboarding_Project_Step__c.object-meta.xml
<CustomObject>
    <label>Onboarding Project Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Project Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>