force-app/main/default/objects/Onboarding_Project_Step__c/fields/Onboarding_Project__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Project__c</fullName>
    <label>Onboarding Project</label>
    <referenceTo>Onboarding_Project__c</referenceTo>
    <relationshipLabel>Onboarding Project Steps</relationshipLabel>
    <relationshipName>Onboarding_Project_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>