force-app/main/default/objects/Onboarding_Project_Step__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date this step was started.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>