force-app/main/default/objects/Onboarding_Project_Step__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>The date that&apos;s planned for work on this step to begin.</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>